# libcross2d-template

./: CMakeLists.txt  README.MD
android/app/: build.gradle
android/app/src/androidTest/java/fr/mydedibox/libcross2d_template/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/fr/mydedibox/libcross2d/: Main.java
android/app/src/main/java/org/libsdl/app/: SDLActivity.java
android/app/src/test/java/fr/mydedibox/libcross2d_template/: ExampleUnitTest.java
src/: app.cpp  main.cpp
